# dbc-bot

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  requirements.txt  run.bat
.do/: app.yaml
.github/workflows/: main.yml  prod.yml  run.yml  shutdown.yml  test.yml  update.yml
migrations/: 20230817080233_self_role.sql
scripts/: bracket_generation.py  text.py
src/: checks.rs  lib.rs  main.rs  misc.rs  ping.rs
src/bracket_tournament/: api.rs  assign_match_id.rs  battle_log.rs  bracket_generation.py  bracket_update.rs  config.rs  mannequin.rs  match_id.rs  mod.rs  player.rs  region.rs  update_battle.rs
src/brawlstars/: api.rs  getters.rs  mod.rs  player.rs
src/commands/: battle_log.rs  club.rs  context_menu.rs  create_self_role_message.rs  db_handler.rs  deregister.rs  draco.rs  fill_manequins.rs  help.rs  host.rs  index.rs  match_id.rs  mod.rs  ping.rs  player.rs  player_lookup.rs  region_proportion.rs  register.rs  reset.rs  reset_match_id.rs  sample_json.rs  set_round.rs  setup.rs  start_tournament.rs  starttournament.rs  submit.rs  update_proof.rs  user.rs  view.rs  view_opponent.rs
src/commands/context_menu/: battle.rs  mod.rs  player.rs
src/commands/manager_only/: config.rs  create_self_role_message.rs  db_handler.rs  disqualify.rs  fill_manequins.rs  member_info.rs  mod.rs  region_proportion.rs  registry_open.rs  reset.rs  set_manager.rs  set_round.rs  setting.rs  setting2.rs  settings.rs  start_tournament.rs  (+2 more)
src/database/: add.rs  battle.rs  config.rs  find.rs  mannequin.rs  mod.rs  open.rs  remove.rs  stat.rs  statistics.rs  update.rs
src/database_utils/: add.rs  battle.rs  battle_happened.rs  config.rs  find.rs  find_discord_id.rs  find_enemy.rs  find_player.rs  find_round.rs  find_tag.rs  mannequin.rs  mod.rs  open.rs  registration_open.rs  remove.rs  update.rs
src/discord/: checks.rs  log.rs  menu.rs  mod.rs  prompt.rs  role.rs
src/functions/: deregister.rs  disqualify.rs  mod.rs  register.rs  submit.rs  view.rs  view2.rs
src/host/: config.rs  disqualify.rs  mod.rs  next.rs  registration.rs  setup.rs  tournament.rs
src/players/: deregister.rs  mod.rs  register.rs  submit.rs  view.rs  view2.rs
src/self_role/: handle_button.rs  mod.rs
src/utils/: api.rs  db_handling.rs  embed_color.rs  misc.rs  mod.rs  mode.rs  types.rs
src/visual/: mod.rs  model.rs  post_battle.rs  pre_battle.rs
(+44 files in other folders)
