[package]
name = "dbc-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "5.5.0"
dotenv = "0.15.0"
poise = "0.5.5"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.183", features = ["derive"] }
sqlx = { version = "0.7.1", features = ["postgres", "runtime-tokio", "macros"] }
tokio = { version = "1.32.0", features = ["full"] }



