[package]
name = "dbc-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

[dependencies]
dashmap = "5.5.0"
dotenv = "0.15.0" # environment variable file library
poise = "0.5.7" # a Discord library
reqwest = { version = "0.11.18", features = ["json"] } # an API library
serde = { version = "1.0.183", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full", "signal"] } # an asynchronous library
serde_json = "1.0.105"
chrono = "0.4.26"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
mongodb = "2.6.1"
futures = "0.3.28"
fmt = "0.1.0"
base64 = "0.21.3"
strum = "0.25.0"
strum_macros = "0.25.2"
image = "0.24.7"
text-to-png = "0.2.0"
bytes = "1.5.0"
serenity_utils = "0.7.0"
just = "1.23.0"
